--- a/src/styles/components/searchCarInventory/_rangeSlider.scss
+++ b/src/styles/components/searchCarInventory/_rangeSlider.scss
@@ -1,5 +1,5 @@
 
-//RANGE SLIDER
+//RANGE rangeSlider
 
 
 .range-container{
@@ -21,7 +21,7 @@
   margin: 2rem 0;
 }
 
-.slider {
+.rangeSlider {
   -webkit-appearance: none;
   // width: 50%;
   width: 100%;
@@ -34,7 +34,7 @@
   
 }
 
-.slider input {
+.rangeSlider input {
   pointer-events: none;
   position: absolute;
   overflow: hidden;
@@ -49,7 +49,7 @@
   // z-index: -1;
 }
 
-.slider::-webkit-slider-thumb {
+.rangeSlider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 15px;
@@ -64,7 +64,7 @@
   outline: 0;
 }
 
-.slider::-moz-range-thumb {
+.rangeSlider::-moz-range-thumb {
   width: 20px;
   height: 20px;
   background: #ea4550;
@@ -78,19 +78,19 @@
   width: 9px;
 }
 
-.slider input::-moz-range-track {
+.rangeSlider input::-moz-range-track {
   position: relative;
   // z-index: -1;
   z-index: 0;
   border: 0;
 }
-.slider input:last-of-type::-moz-range-track {
+.rangeSlider input:last-of-type::-moz-range-track {
   -moz-appearance: none;
   background: none transparent;
   border: 0;
 
 }
-.slider input[type=range]::-moz-focus-outer {
+.rangeSlider input[type=range]::-moz-focus-outer {
 border: 0;
 }
 
