--- a/src/styles/components/whatsHappeningPages/_supra.scss
+++ b/src/styles/components/whatsHappeningPages/_supra.scss
@@ -5,14 +5,29 @@ $margin3: 3rem;
   background: white;
   position:absolute;
   top: 0;
-  left: 0;
+  // left: 0;
   // width: 100vw;
-  z-index:3;
+  width: 100vw;
+  z-index:200;
   padding-top: 3rem;
+  // width: 100vw;
  
   &-flex{
-    display:flex;
+    display:flex; 
 
+    &--inner{
+      @media screen and(max-width: 768px){
+        flex-direction:column;
+      }
+    }
+    &--inner2{
+      display:flex;
+
+      @media screen and(max-width: 768px){
+        flex-direction:column-reverse;
+
+      }
+    }
   }
   &-container{
     justify-content: space-around;
@@ -24,6 +39,9 @@ $margin3: 3rem;
 
     &--img{
       width: 20rem;
+      @media screen and(max-width: 768px){
+        width: 10rem;
+      }
     }
     &--text{
       font-size: 1.6rem;
@@ -46,9 +64,16 @@ $margin3: 3rem;
     margin: 0 3rem 0 0;
     padding: 0 2rem;
 
+    @media screen and(max-width: 768px){
+    margin-top: .5rem;
+    align-self: flex-start;
+    }
+
+
     &:hover &--content{
       display:block;
     }
+
 
     &--button{
       background-color: black;
@@ -57,6 +82,11 @@ $margin3: 3rem;
       font-size: 1.6rem;
       border: none;
       cursor:pointer;
+
+      @media screen and(max-width: 768px){
+       font-size: 1.4rem;
+      }
+  
     }
 
     &--arrow{
@@ -119,11 +149,22 @@ $margin3: 3rem;
     justify-content:center;
     border-top: 1px solid rgb(238, 237, 237);
 
+    @media screen and(max-width: 768px){
+      margin-top: 1rem;
+      padding:0;
+    }
+
     &--dropdown{
       position:relative;
       border-right:1px solid rgb(238, 237, 237);
       padding: 0 3rem;
       cursor:pointer;
+
+
+      @media screen and(max-width: 768px){
+        padding: 0;
+      }
+
       &:hover{
         background: rgb(238, 237, 237);
         padding: 0 3rem;
@@ -132,10 +173,21 @@ $margin3: 3rem;
     &--dropdown_noHover{
       border-right:1px solid rgb(238, 237, 237);
       padding: 0 3rem;
+
+      @media screen and(max-width: 768px){
+       padding: 0;
+      }
+
     }
 
     &--text{
      margin: 2rem;
+
+      @media screen and(max-width: 768px){
+        margin: 0;
+        font-size: 1rem;
+        padding: 1rem .5rem;
+      }
  
     }
     
@@ -175,22 +227,33 @@ $margin3: 3rem;
     font-family: arial;
     border: $border;
     padding: 1rem 0;
+    width: 100vw;
   }
-
-&
-
-
-
 
 
   &-body{
     &--flex{
       display:flex;
       margin: 0 10%;
+      // flex-wrap: wrap;
+      // align-items:center;
+      justify-content: center;
+
+      @media screen and(max-width:768px){
+        flex-wrap:wrap;
+        align-items:center;
+        margin: 0 2%;
+      }
     }
     &--main{
      width: 70%;
      padding-right: 3rem;
+
+     @media screen and(max-width: 768px){
+       padding-right: 0;
+       padding: 0 1rem;
+       width: 100%;
+     }
     }
     &--social{
       width: 30%;
@@ -201,6 +264,7 @@ $margin3: 3rem;
       font-size: 3rem;
       font-family: tahoma;
       margin: 3rem 0 0 2rem;
+
       &::before{
         content:"";
         position: absolute;
@@ -208,6 +272,10 @@ $margin3: 3rem;
         width: 1rem;
         height:100%;
         border-left: 3px solid red;
+
+        @media screen and(max-width: 768px){
+          left: -7%;
+        }
       }
     }
     &--author{
@@ -306,9 +374,16 @@ $margin3: 3rem;
     &--container{
       display:flex;
       justify-content:space-around;
+
+      @media screen and(max-width: 768px){
+        flex-direction: column;
+      }
     }
     &--main{
       display:flex;
+      @media screen and(max-width: 768px){
+        flex-direction: column;
+      }
     }
     &--column{
       display:flex;
@@ -329,6 +404,12 @@ $margin3: 3rem;
       &_logo{
         display:flex;
         align-items:center;
+      }
+    }
+
+    &--copy{
+      @media screen and(max-width:768px){
+        font-size: 1.4rem;
       }
     }
  
